# starwit-aic-api

./: .gitignore  README.md  pom.xml  run_actions_locally.sh
.github/workflows/: create-release.yaml  generate_and_build.yaml  pr-build.yaml  publish-libraries.yaml  settings.xml
java/: .gitignore  generate.sh  pom.xml
java/aicockpit-jar/: pom.xml
python/: .gitignore  generate.sh
python/generated-library/: pyproject.toml
python/generated-library/starwit_aic_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/generated-library/starwit_aic_api/api/: __init__.py  default_api.py
python/generated-library/starwit_aic_api/docs/: AIModel.md  AIModelType.md  Action.md  ActionEntity.md  ActionType.md  ActionTypeEntity.md  Decision.md  DecisionEntity.md  DecisionType.md  DecisionTypeEntity.md  DefaultApi.md  Info.md  Model.md  ModelType.md  Module.md  ModuleSBOMLocationValue.md
python/generated-library/starwit_aic_api/models/: __init__.py  action.py  action_entity.py  action_type.py  action_type_entity.py  ai_model.py  ai_model_type.py  decision.py  decision_entity.py  decision_type.py  decision_type_entity.py  info.py  model.py  model_type.py  module.py  module_sbom_location_value.py
python/generated-library/starwit_aic_api/test/: test_action.py  test_action_type.py  test_ai_model.py  test_ai_model_type.py  test_decision.py  test_decision_type.py  test_default_api.py  test_info.py  test_model.py  test_model_type.py  test_module.py  test_module_sbom_location_value.py
src/main/java/eu/kicockpit/: ApiException.java  JSON.java
(+31 files in other folders)
